--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
   "dependencies": {
+    "co-mocha": "^1.1.3",
+    "gun": "^0.3.9991",
+    "ip": "^1.1.4",
     "mocha": "^3.2.0",
+    "panic-manager": "^1.2.0",
     "panic-server": "^1.1.0"
   },
   "devDependencies": {
-    "eslint": "^3.12.1"
+    "eslint": "^3.12.1",
+    "eslint-config-llama": "^3.0.0"
   },
   "name": "panic-load-test",
   "version": "1.0.0",
   "description": "Test how many concurrent messages gunDB can handle",
   "main": "test.js",
   "scripts": {
-    "test": "mocha test.js"
+    "test": "mocha test.js -r co-mocha"
   },
   "author": "Jesse Gibson <Jesse_Gibson@me.com> (http://PsychoLlama.io/)",
   "license": "MIT"
